[package]
name = "scale-to-zero"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
scale-to-zero-common = { path = "../scale-to-zero-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1"
kube = { version = "0.87.2", features = ["runtime", "derive", "unstable-runtime"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
futures = "0.3.17"
once_cell = "1.19.0"

[[bin]]
name = "scale-to-zero"
path = "src/main.rs"
